--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,10 @@ JsonSerialization/obj/*
 JsonSerialization/Debug/bin/*
 JsonSerialization/Debug/obj/*
 
+
+TestTaskApi/bin/*
+TestTaskApi/obj/*
+TestTaskApi/Debug/bin/*
+TestTaskApi/Debug/obj/*
+
+
