--- a/TestTaskApi/TestTaskApi.csproj
+++ b/TestTaskApi/TestTaskApi.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\EntityConfiguration\" />
+    <Folder Include="Data\Repository\" />
+  </ItemGroup>
+
 </Project>
