--- a/TestTaskApi/appsettings.json
+++ b/TestTaskApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Server=(localdb)\\mssqllocaldb;Database=PersonDb;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
